@@ -8,7 +8,8 @@
 package org.elasticsearch.xpack.esql.expression.promql.function;
 
 import org.elasticsearch.xpack.esql.core.expression.Expression;
-import org.elasticsearch.xpack.esql.core.expression.function.Function;
+import org.elasticsearch.xpack.esql.core.expression.Literal;
+import org.elasticsearch.xpack.esql.core.expression.function.scalar.ScalarFunction;
 import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.AbsentOverTime;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.AggregateFunction;
@@ -17,6 +18,7 @@ import org.elasticsearch.xpack.esql.expression.function.aggregate.AvgOverTime;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.Count;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.CountOverTime;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.Delta;
+import org.elasticsearch.xpack.esql.expression.function.aggregate.Deriv;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.FirstOverTime;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.Idelta;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.Increase;
@@ -31,79 +33,327 @@ import org.elasticsearch.xpack.esql.expression.function.aggregate.PercentileOver
 import org.elasticsearch.xpack.esql.expression.function.aggregate.PresentOverTime;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.Rate;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.StdDev;
-import org.elasticsearch.xpack.esql.expression.function.aggregate.StdDevOverTime;
+import org.elasticsearch.xpack.esql.expression.function.aggregate.StddevOverTime;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.Sum;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.SumOverTime;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.TimeSeriesAggregateFunction;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.Variance;
 import org.elasticsearch.xpack.esql.expression.function.aggregate.VarianceOverTime;
+import org.elasticsearch.xpack.esql.expression.function.scalar.Clamp;
+import org.elasticsearch.xpack.esql.expression.function.scalar.conditional.ClampMax;
+import org.elasticsearch.xpack.esql.expression.function.scalar.conditional.ClampMin;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Abs;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Acos;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Asin;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Atan;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Ceil;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Cos;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Cosh;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Exp;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Floor;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Log10;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Round;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Sin;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Sinh;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Sqrt;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Tan;
+import org.elasticsearch.xpack.esql.expression.function.scalar.math.Tanh;
+import org.elasticsearch.xpack.esql.expression.predicate.operator.arithmetic.Div;
+import org.elasticsearch.xpack.esql.expression.predicate.operator.arithmetic.Mul;
 import org.elasticsearch.xpack.esql.parser.ParsingException;
+import org.elasticsearch.xpack.esql.plan.logical.promql.PromqlDataType;
 
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
-import java.util.function.BiFunction;
 
+/**
+ * A registry for PromQL functions that maps function names to their respective definitions.
+ */
 public class PromqlFunctionRegistry {
+
+    // Common parameter definitions
+    private static final ParamInfo RANGE_VECTOR = ParamInfo.child("v", PromqlDataType.RANGE_VECTOR, "Range vector input.");
+    private static final ParamInfo INSTANT_VECTOR = ParamInfo.child("v", PromqlDataType.INSTANT_VECTOR, "Instant vector input.");
+    private static final ParamInfo SCALAR = ParamInfo.child("s", PromqlDataType.SCALAR, "Scalar value.");
+    private static final ParamInfo QUANTILE = ParamInfo.of("φ", PromqlDataType.SCALAR, "Quantile value (0 ≤ φ ≤ 1).");
+    private static final ParamInfo TO_NEAREST = ParamInfo.optional(
+        "to_nearest",
+        PromqlDataType.SCALAR,
+        "Round to nearest multiple of this value."
+    );
+    private static final ParamInfo MIN_SCALAR = ParamInfo.of("min", PromqlDataType.SCALAR, "Minimum value.");
+    private static final ParamInfo MAX_SCALAR = ParamInfo.of("max", PromqlDataType.SCALAR, "Maximum value.");
+
+    private static final FunctionDefinition[] FUNCTION_DEFINITIONS = new FunctionDefinition[] {
+        //
+        withinSeries(
+            "delta",
+            Delta::new,
+            "Calculates the difference between the first and last value of each time series in a range vector.",
+            "delta(cpu_temp_celsius[2h])"
+        ),
+        withinSeries(
+            "idelta",
+            Idelta::new,
+            "Calculates the difference between the last two samples of each time series in a range vector.",
+            "idelta(cpu_temp_celsius[5m])"
+        ),
+        withinSeries(
+            "increase",
+            Increase::new,
+            "Calculates the increase in the time series in the range vector, adjusting for counter resets.",
+            "increase(http_requests_total[5m])"
+        ),
+        withinSeries(
+            "irate",
+            Irate::new,
+            "Calculates the per-second instant rate of increase based on the last two data points.",
+            "irate(http_requests_total[5m])"
+        ),
+        withinSeries(
+            "rate",
+            Rate::new,
+            "Calculates the per-second average rate of increase of the time series in the range vector.",
+            "rate(http_requests_total[5m])"
+        ),
+        withinSeries(
+            "first_over_time",
+            FirstOverTime::new,
+            "Returns the first value of each time series in the specified time range.",
+            "first_over_time(http_requests_total[1h])"
+        ),
+        withinSeries(
+            "last_over_time",
+            LastOverTime::new,
+            "Returns the most recent value of each time series in the specified time range.",
+            "last_over_time(http_requests_total[1h])"
+        ),
+        withinSeries(
+            "deriv",
+            Deriv::new,
+            "Calculates the per-second derivative of the time series using simple linear regression.",
+            "deriv(node_memory_free_bytes[5m])"
+        ),
+        //
+        withinSeriesOverTimeUnary(
+            "avg_over_time",
+            AvgOverTime::new,
+            "Returns the average value of all points in the specified time range.",
+            "avg_over_time(http_requests_total[5m])"
+        ),
+        withinSeriesOverTimeUnary(
+            "count_over_time",
+            CountOverTime::new,
+            "Returns the count of all values in the specified time range.",
+            "count_over_time(http_requests_total[5m])"
+        ),
+        withinSeriesOverTimeUnary(
+            "max_over_time",
+            MaxOverTime::new,
+            "Returns the maximum value of all points in the specified time range.",
+            "max_over_time(http_requests_total[5m])"
+        ),
+        withinSeriesOverTimeUnary(
+            "min_over_time",
+            MinOverTime::new,
+            "Returns the minimum value of all points in the specified time range.",
+            "min_over_time(http_requests_total[5m])"
+        ),
+        withinSeriesOverTimeUnary(
+            "sum_over_time",
+            SumOverTime::new,
+            "Returns the sum of all values in the specified time range.",
+            "sum_over_time(http_requests_total[5m])"
+        ),
+        withinSeriesOverTimeUnary(
+            "stddev_over_time",
+            StddevOverTime::new,
+            "Returns the population standard deviation of the values in the specified time range.",
+            "stddev_over_time(http_requests_total[5m])"
+        ),
+        withinSeriesOverTimeUnary(
+            "stdvar_over_time",
+            VarianceOverTime::new,
+            "Returns the population standard variance of the values in the specified time range.",
+            "stdvar_over_time(http_requests_total[5m])"
+        ),
+        withinSeriesOverTimeUnary(
+            "absent_over_time",
+            AbsentOverTime::new,
+            "Returns 1 if the range vector has no elements, otherwise returns an empty vector.",
+            "absent_over_time(nonexistent_metric[5m])"
+        ),
+        withinSeriesOverTimeUnary(
+            "present_over_time",
+            PresentOverTime::new,
+            "Returns 1 if the range vector has any elements, otherwise returns an empty vector.",
+            "present_over_time(http_requests_total[5m])"
+        ),
+        //
+        withinSeriesOverTimeBinary(
+            "quantile_over_time",
+            PercentileOverTime::new,
+            "Returns the φ-quantile (0 ≤ φ ≤ 1) of the values in the specified time range.",
+            List.of(QUANTILE, RANGE_VECTOR),
+            "quantile_over_time(0.5, http_requests_total[1h])"
+        ),
+        //
+        acrossSeriesUnary("avg", Avg::new, "Calculates the average of the values across the input vector.", "avg(http_requests_total)"),
+        acrossSeriesUnary("count", Count::new, "Counts the number of elements in the input vector.", "count(http_requests_total)"),
+        acrossSeriesUnary("max", Max::new, "Returns the maximum value across the input vector.", "max(http_requests_total)"),
+        acrossSeriesUnary("min", Min::new, "Returns the minimum value across the input vector.", "min(http_requests_total)"),
+        acrossSeriesUnary("sum", Sum::new, "Calculates the sum of the values across the input vector.", "sum(http_requests_total)"),
+        acrossSeriesUnary(
+            "stddev",
+            StdDev::new,
+            "Calculates the population standard deviation across the input vector.",
+            "stddev(http_requests_total)"
+        ),
+        acrossSeriesUnary(
+            "stdvar",
+            Variance::new,
+            "Calculates the population standard variance across the input vector.",
+            "stdvar(http_requests_total)"
+        ),
+        //
+        acrossSeriesBinary(
+            "quantile",
+            Percentile::new,
+            "Returns the φ-quantile (0 ≤ φ ≤ 1) of the values across the input vector.",
+            List.of(QUANTILE, INSTANT_VECTOR),
+            "quantile(0.9, http_request_duration_seconds)"
+        ),
+        //
+        valueTransformationFunction(
+            "ceil",
+            Ceil::new,
+            "Rounds the sample values of all elements up to the nearest integer.",
+            "ceil(rate(http_requests_total[5m]))"
+        ),
+        valueTransformationFunction(
+            "abs",
+            Abs::new,
+            "Returns the input vector with all sample values converted to their absolute value.",
+            "abs(rate(http_requests_total[5m]))"
+        ),
+        valueTransformationFunction(
+            "exp",
+            Exp::new,
+            "Calculates the exponential function for all elements in the input vector.",
+            "exp(rate(http_requests_total[5m]))"
+        ),
+        valueTransformationFunction(
+            "sqrt",
+            Sqrt::new,
+            "Calculates the square root of all elements in the input vector.",
+            "sqrt(http_requests_total)"
+        ),
+        valueTransformationFunction(
+            "log10",
+            Log10::new,
+            "Calculates the decimal logarithm for all elements in the input vector.",
+            "log10(http_requests_total)"
+        ),
+        valueTransformationFunction(
+            "floor",
+            Floor::new,
+            "Rounds the sample values of all elements down to the nearest integer.",
+            "floor(rate(http_requests_total[5m]))"
+        ),
+        valueTransformationFunctionOptionalArg("round", (source, value, toNearest) -> {
+            if (toNearest == null) {
+                return new Round(source, value, null);
+            } else {
+                // round to nearest multiple of toNearest: round(value / toNearest) * toNearest
+                return new Mul(source, new Round(source, new Div(source, value, toNearest), null), toNearest);
+            }
+        },
+            "Rounds the sample values to the nearest integer, or to the nearest multiple of the optional argument.",
+            List.of(INSTANT_VECTOR, TO_NEAREST),
+            "round(rate(http_requests_total[5m]))"
+        ),
+        //
+        valueTransformationFunction("asin", Asin::new, "Calculates the arcsine of all elements in the input vector.", "asin(some_metric)"),
+        valueTransformationFunction(
+            "acos",
+            Acos::new,
+            "Calculates the arccosine of all elements in the input vector.",
+            "acos(some_metric)"
+        ),
+        valueTransformationFunction(
+            "atan",
+            Atan::new,
+            "Calculates the arctangent of all elements in the input vector.",
+            "atan(some_metric)"
+        ),
+        valueTransformationFunction("cos", Cos::new, "Calculates the cosine of all elements in the input vector.", "cos(some_metric)"),
+        valueTransformationFunction(
+            "cosh",
+            Cosh::new,
+            "Calculates the hyperbolic cosine of all elements in the input vector.",
+            "cosh(some_metric)"
+        ),
+        valueTransformationFunction(
+            "sinh",
+            Sinh::new,
+            "Calculates the hyperbolic sine of all elements in the input vector.",
+            "sinh(some_metric)"
+        ),
+        valueTransformationFunction("sin", Sin::new, "Calculates the sine of all elements in the input vector.", "sin(some_metric)"),
+        valueTransformationFunction("tan", Tan::new, "Calculates the tangent of all elements in the input vector.", "tan(some_metric)"),
+        valueTransformationFunction(
+            "tanh",
+            Tanh::new,
+            "Calculates the hyperbolic tangent of all elements in the input vector.",
+            "tanh(some_metric)"
+        ),
+        valueTransformationFunctionBinary(
+            "clamp_min",
+            ClampMin::new,
+            "Clamps the sample values of all elements to have a lower limit of min.",
+            List.of(INSTANT_VECTOR, MIN_SCALAR),
+            "clamp_min(http_requests_total, 0)"
+        ),
+        valueTransformationFunctionBinary(
+            "clamp_max",
+            ClampMax::new,
+            "Clamps the sample values of all elements to have an upper limit of max.",
+            List.of(INSTANT_VECTOR, MAX_SCALAR),
+            "clamp_max(http_requests_total, 100)"
+        ),
+        valueTransformationFunctionTernary(
+            "clamp",
+            Clamp::new,
+            "Clamps the sample values of all elements to be within [min, max].",
+            List.of(INSTANT_VECTOR, MIN_SCALAR, MAX_SCALAR),
+            "clamp(http_requests_total, 0, 100)"
+        ),
+        //
+        vector("Returns the scalar as a vector with no labels.", "vector(1)"),
+        scalarFunction("pi", (source) -> Literal.fromDouble(source, Math.PI), "Returns the value of pi.", "pi()") };
+
     public static final PromqlFunctionRegistry INSTANCE = new PromqlFunctionRegistry();
+
     private final Map<String, FunctionDefinition> promqlFunctions = new HashMap<>();
 
-    public PromqlFunctionRegistry() {
-        register(functionDefinitions());
-    }
-
-    /**
-     * Define all PromQL functions with their metadata and ESQL constructors.
-     * This centralizes function definitions and enables proper validation.
-     */
-    private static FunctionDefinition[][] functionDefinitions() {
-        return new FunctionDefinition[][] {
-            // Counter-based range functions (require timestamp for rate calculations)
-            new FunctionDefinition[] {
-                withinSeries("delta", Delta::new),
-                withinSeries("idelta", Idelta::new),
-                withinSeries("increase", Increase::new),
-                withinSeries("irate", Irate::new),
-                withinSeries("rate", Rate::new) },
-            // Aggregation range functions
-            new FunctionDefinition[] {
-                withinSeriesOverTimeWithWindow("avg_over_time", AvgOverTime::new),
-                withinSeriesOverTimeWithWindow("count_over_time", CountOverTime::new),
-                withinSeriesOverTimeWithWindow("max_over_time", MaxOverTime::new),
-                withinSeriesOverTimeWithWindow("min_over_time", MinOverTime::new),
-                withinSeriesOverTimeWithWindow("sum_over_time", SumOverTime::new),
-                withinSeriesOverTime("stddev_over_time", StdDevOverTime::new),
-                withinSeriesOverTime("stdvar_over_time", VarianceOverTime::new) },
-            // Selection range functions (require timestamp)
-            new FunctionDefinition[] {
-                withinSeries("first_over_time", FirstOverTime::new),
-                withinSeries("last_over_time", LastOverTime::new) },
-            // Presence range functions
-            new FunctionDefinition[] {
-                withinSeriesOverTime("absent_over_time", AbsentOverTime::new),
-                withinSeriesOverTime("present_over_time", PresentOverTime::new) },
-            // Range functions with parameters
-            new FunctionDefinition[] { withinSeriesOverTime("quantile_over_time", PercentileOverTime::new) },
-            // Across-series aggregations (basic - single field parameter)
-            new FunctionDefinition[] {
-                acrossSeries("avg", Avg::new),
-                acrossSeries("count", Count::new),
-                acrossSeries("max", Max::new),
-                acrossSeries("min", Min::new),
-                acrossSeries("sum", Sum::new),
-                acrossSeries("stddev", StdDev::new),
-                acrossSeries("stdvar", Variance::new) },
-            // Across-series aggregations with parameters
-            new FunctionDefinition[] { acrossSeriesBinary("quantile", Percentile::new) } };
+    private PromqlFunctionRegistry() {
+        for (FunctionDefinition def : FUNCTION_DEFINITIONS) {
+            String normalized = normalize(def.name());
+            promqlFunctions.put(normalized, def);
+        }
     }
 
     /**
      * Represents the parameter count constraints for a PromQL function.
      */
     public record Arity(int min, int max) {
+
         // Common arity patterns as constants
         public static final Arity NONE = new Arity(0, 0);
         public static final Arity ONE = new Arity(1, 1);
@@ -145,6 +395,25 @@ public class PromqlFunctionRegistry {
         }
     }
 
+    public record ParamInfo(String name, PromqlDataType type, String description, boolean optional, boolean child) {
+        public static ParamInfo child(String name, PromqlDataType type, String description) {
+            return new ParamInfo(name, type, description, false, true);
+        }
+
+        public static ParamInfo of(String name, PromqlDataType type, String description) {
+            return new ParamInfo(name, type, description, false, false);
+        }
+
+        public static ParamInfo optional(String name, PromqlDataType type, String description) {
+            return new ParamInfo(name, type, description, true, false);
+        }
+    }
+
+    @FunctionalInterface
+    public interface EsqlFunctionBuilder {
+        Expression build(Source source, Expression target, Expression timestamp, Expression window, List<Expression> extraParams);
+    }
+
     /**
      * Function definition record for registration and metadata.
      */
@@ -152,34 +421,44 @@ public class PromqlFunctionRegistry {
         String name,
         FunctionType functionType,
         Arity arity,
-        BiFunction<Source, List<Expression>, Function> esqlBuilder
+        EsqlFunctionBuilder esqlBuilder,
+        String description,
+        List<ParamInfo> params,
+        List<String> examples
     ) {
         public FunctionDefinition {
             Objects.requireNonNull(name, "name cannot be null");
             Objects.requireNonNull(functionType, "functionType cannot be null");
             Objects.requireNonNull(arity, "arity cannot be null");
             Objects.requireNonNull(esqlBuilder, "esqlBuilder cannot be null");
+            Objects.requireNonNull(description, "description cannot be null");
+            Objects.requireNonNull(params, "params cannot be null");
+            Objects.requireNonNull(examples, "examples cannot be null");
+            if (arity.max() != params.size()) {
+                throw new IllegalArgumentException(
+                    String.format(
+                        Locale.ROOT,
+                        "Arity max %d does not match number of parameters %d for function %s",
+                        arity.max(),
+                        params.size(),
+                        name
+                    )
+                );
+            }
+            if (params.isEmpty() == false && params.stream().filter(ParamInfo::child).count() != 1) {
+                throw new IllegalArgumentException("If a function takes parameters, there must be exactly one child parameter");
+            }
         }
     }
 
     @FunctionalInterface
     protected interface WithinSeries<T extends TimeSeriesAggregateFunction> {
-        T build(Source source, Expression field, Expression timestamp);
-    }
-
-    @FunctionalInterface
-    protected interface WithinSeriesWindow<T extends TimeSeriesAggregateFunction> {
         T build(Source source, Expression field, Expression window, Expression timestamp);
     }
 
     @FunctionalInterface
-    protected interface OverTimeWithinSeries<T extends TimeSeriesAggregateFunction> {
-        T build(Source source, Expression valueField);
-    }
-
-    @FunctionalInterface
-    protected interface OverTimeWithinSeriesBinary<T extends TimeSeriesAggregateFunction> {
-        T build(Source source, Expression valueField, Expression param);
+    protected interface OverTime<T extends TimeSeriesAggregateFunction> {
+        T build(Source source, Expression field, Expression filter, Expression window);
     }
 
     @FunctionalInterface
@@ -188,81 +467,214 @@ public class PromqlFunctionRegistry {
     }
 
     @FunctionalInterface
-    protected interface AcrossSeriesBinary<T extends AggregateFunction> {
-        T build(Source source, Expression field, Expression param);
+    protected interface OverTimeBinary<T extends TimeSeriesAggregateFunction> {
+        T build(Source source, Expression field, Expression filter, Expression window, Expression param);
     }
 
-    private static FunctionDefinition withinSeriesOverTime(String name, OverTimeWithinSeries<?> builder) {
+    @FunctionalInterface
+    protected interface AcrossSeriesBinary<T extends AggregateFunction> {
+        T build(Source source, Expression field, Expression filter, Expression window, Expression param);
+    }
+
+    @FunctionalInterface
+    protected interface ValueTransformationFunction<T extends ScalarFunction> {
+        T build(Source source, Expression value);
+    }
+
+    @FunctionalInterface
+    protected interface ValueTransformationFunctionBinary<T extends Expression> {
+        T build(Source source, Expression value, Expression arg1);
+    }
+
+    @FunctionalInterface
+    protected interface ValueTransformationFunctionTernary<T extends Expression> {
+        T build(Source source, Expression value, Expression arg1, Expression arg2);
+    }
+
+    @FunctionalInterface
+    protected interface ScalarFunctionBuilder {
+        Expression build(Source source);
+    }
+
+    private static FunctionDefinition withinSeries(String name, WithinSeries<?> builder, String description, String example) {
         return new FunctionDefinition(
             name,
             FunctionType.WITHIN_SERIES_AGGREGATION,
             Arity.ONE,
-            (source, params) -> builder.build(source, params.get(0))
+            (source, target, timestamp, window, extraParams) -> builder.build(source, target, window, timestamp),
+            description,
+            List.of(RANGE_VECTOR),
+            List.of(example)
         );
     }
 
-    private static FunctionDefinition withinSeriesOverTime(String name, OverTimeWithinSeriesBinary<?> builder) {
+    private static FunctionDefinition withinSeriesOverTimeUnary(String name, OverTime<?> builder, String description, String example) {
+        return new FunctionDefinition(
+            name,
+            FunctionType.WITHIN_SERIES_AGGREGATION,
+            Arity.ONE,
+            (source, target, timestamp, window, extraParams) -> builder.build(source, target, Literal.TRUE, window),
+            description,
+            List.of(RANGE_VECTOR),
+            List.of(example)
+        );
+    }
+
+    private static FunctionDefinition withinSeriesOverTimeBinary(
+        String name,
+        OverTimeBinary<?> builder,
+        String description,
+        List<ParamInfo> params,
+        String example
+    ) {
         return new FunctionDefinition(
             name,
             FunctionType.WITHIN_SERIES_AGGREGATION,
             Arity.TWO,
-            (source, params) -> builder.build(source, params.get(0), params.get(1))
+            (source, target, timestamp, window, extraParams) -> {
+                Expression param = extraParams.getFirst();
+                return builder.build(source, target, Literal.TRUE, window, param);
+            },
+            description,
+            params,
+            List.of(example)
         );
     }
 
-    // NB: There's no longer a single argument constructor so accept the dual one while passing on a NO_WINDOW
-    private static FunctionDefinition withinSeriesOverTimeWithWindow(String name, OverTimeWithinSeriesBinary<?> builder) {
-        return new FunctionDefinition(
-            name,
-            FunctionType.WITHIN_SERIES_AGGREGATION,
-            Arity.ONE,
-            (source, params) -> builder.build(source, params.get(0), AggregateFunction.NO_WINDOW)
-        );
-    }
-
-    private static FunctionDefinition withinSeries(String name, WithinSeries<?> builder) {
-        return new FunctionDefinition(name, FunctionType.WITHIN_SERIES_AGGREGATION, Arity.ONE, (source, params) -> {
-            Expression valueField = params.get(0);
-            Expression timestampField = params.get(1);
-            return builder.build(source, valueField, timestampField);
-        });
-    }
-
-    private static FunctionDefinition withinSeries(String name, WithinSeriesWindow<?> builder) {
-        return new FunctionDefinition(name, FunctionType.WITHIN_SERIES_AGGREGATION, Arity.ONE, (source, params) -> {
-            Expression valueField = params.get(0);
-            Expression timestampField = params.get(1);
-            return builder.build(source, valueField, AggregateFunction.NO_WINDOW, timestampField);
-        });
-    }
-
-    private static FunctionDefinition acrossSeries(String name, AcrossSeriesUnary<?> builder) {
+    private static FunctionDefinition acrossSeriesUnary(String name, AcrossSeriesUnary<?> builder, String description, String example) {
         return new FunctionDefinition(
             name,
             FunctionType.ACROSS_SERIES_AGGREGATION,
             Arity.ONE,
-            (source, params) -> builder.build(source, params.get(0))
+            (source, target, timestamp, window, extraParams) -> builder.build(source, target),
+            description,
+            List.of(INSTANT_VECTOR),
+            List.of(example)
         );
     }
 
-    private static FunctionDefinition acrossSeriesBinary(String name, AcrossSeriesBinary<?> builder) {
-        return new FunctionDefinition(name, FunctionType.ACROSS_SERIES_AGGREGATION, Arity.TWO, (source, params) -> {
-            Expression param = params.get(0);  // First param (k, quantile, etc.)
-            Expression field = params.get(1);   // Second param (the vector field)
-            return builder.build(source, field, param);
-        });
+    private static FunctionDefinition acrossSeriesBinary(
+        String name,
+        AcrossSeriesBinary<?> builder,
+        String description,
+        List<ParamInfo> params,
+        String example
+    ) {
+        return new FunctionDefinition(
+            name,
+            FunctionType.ACROSS_SERIES_AGGREGATION,
+            Arity.TWO,
+            (source, target, timestamp, window, extraParams) -> {
+                Expression param = extraParams.getFirst();
+                return builder.build(source, target, Literal.TRUE, window, param);
+            },
+            description,
+            params,
+            List.of(example)
+        );
     }
 
-    private void register(FunctionDefinition[][] definitionGroups) {
-        for (FunctionDefinition[] group : definitionGroups) {
-            for (FunctionDefinition def : group) {
-                String normalized = normalize(def.name());
-                promqlFunctions.put(normalized, def);
-            }
-        }
+    private static FunctionDefinition valueTransformationFunction(
+        String name,
+        ValueTransformationFunction<?> builder,
+        String description,
+        String example
+    ) {
+        return new FunctionDefinition(
+            name,
+            FunctionType.VALUE_TRANSFORMATION,
+            Arity.ONE,
+            (source, target, timestamp, window, extraParams) -> builder.build(source, target),
+            description,
+            List.of(INSTANT_VECTOR),
+            List.of(example)
+        );
+    }
+
+    private static FunctionDefinition valueTransformationFunctionBinary(
+        String name,
+        ValueTransformationFunctionBinary<?> builder,
+        String description,
+        List<ParamInfo> params,
+        String example
+    ) {
+        return new FunctionDefinition(
+            name,
+            FunctionType.VALUE_TRANSFORMATION,
+            Arity.TWO,
+            (source, target, timestamp, window, extraParams) -> builder.build(source, target, extraParams.get(0)),
+            description,
+            params,
+            List.of(example)
+        );
+    }
+
+    private static FunctionDefinition valueTransformationFunctionTernary(
+        String name,
+        ValueTransformationFunctionTernary<?> builder,
+        String description,
+        List<ParamInfo> params,
+        String example
+    ) {
+        return new FunctionDefinition(
+            name,
+            FunctionType.VALUE_TRANSFORMATION,
+            Arity.fixed(3),
+            (source, target, timestamp, window, extraParams) -> builder.build(source, target, extraParams.get(0), extraParams.get(1)),
+            description,
+            params,
+            List.of(example)
+        );
+    }
+
+    private static FunctionDefinition valueTransformationFunctionOptionalArg(
+        String name,
+        ValueTransformationFunctionBinary<?> builder,
+        String description,
+        List<ParamInfo> params,
+        String example
+    ) {
+        return new FunctionDefinition(
+            name,
+            FunctionType.VALUE_TRANSFORMATION,
+            Arity.range(1, 2),
+            (source, target, timestamp, window, extraParams) -> builder.build(
+                source,
+                target,
+                extraParams.isEmpty() ? null : extraParams.getFirst()
+            ),
+            description,
+            params,
+            List.of(example)
+        );
+    }
+
+    private static FunctionDefinition vector(String description, String example) {
+        return new FunctionDefinition(
+            "vector",
+            FunctionType.VECTOR_CONVERSION,
+            Arity.ONE,
+            (source, target, timestamp, window, extraParams) -> target,
+            description,
+            List.of(SCALAR),
+            List.of(example)
+        );
+    }
+
+    private static FunctionDefinition scalarFunction(String name, ScalarFunctionBuilder builder, String description, String example) {
+        return new FunctionDefinition(
+            name,
+            FunctionType.SCALAR,
+            Arity.NONE,
+            (source, target, timestamp, window, extraParams) -> builder.build(source),
+            description,
+            List.of(),
+            List.of(example)
+        );
     }
 
     // PromQL function names not yet implemented
+    // https://github.com/elastic/metrics-program/issues/39
     private static final Set<String> NOT_IMPLEMENTED = Set.of(
         // Across-series aggregations (not yet available in ESQL)
         "bottomk",
@@ -272,46 +684,26 @@ public class PromqlFunctionRegistry {
 
         // Range vector functions (not yet implemented)
         "changes",
-        "deriv",
         "holt_winters",
         "mad_over_time",
         "predict_linear",
         "resets",
 
         // Instant vector functions
-        "abs",
         "absent",
-        "ceil",
-        "clamp",
-        "clamp_max",
-        "clamp_min",
-        "exp",
-        "floor",
         "ln",
         "log2",
-        "log10",
-        "round",
         "scalar",
         "sgn",
         "sort",
         "sort_desc",
-        "sqrt",
 
         // Trigonometric functions
-        "acos",
         "acosh",
-        "asin",
         "asinh",
-        "atan",
         "atanh",
-        "cos",
-        "cosh",
         "deg",
         "rad",
-        "sin",
-        "sinh",
-        "tan",
-        "tanh",
 
         // Time functions
         "day_of_month",
@@ -328,7 +720,7 @@ public class PromqlFunctionRegistry {
         "label_join",
         "label_replace",
 
-        // Special functions
+        // Histogram functions
         "histogram_avg",
         "histogram_count",
         "histogram_fraction",
@@ -336,36 +728,50 @@ public class PromqlFunctionRegistry {
         "histogram_stddev",
         "histogram_stdvar",
         "histogram_sum",
-        "pi",
-        "time",
-        "vector"
+        // Scalar functions
+        "time"
     );
 
     private String normalize(String name) {
         return name.toLowerCase(Locale.ROOT);
     }
 
-    public Boolean functionExists(String name) {
-        String normalized = normalize(name);
-        if (promqlFunctions.containsKey(normalized)) {
-            return true;
-        }
-        if (NOT_IMPLEMENTED.contains(normalized)) {
-            return null;
-        }
-        return false;
+    public Collection<FunctionDefinition> allFunctions() {
+        return new ArrayList<>(promqlFunctions.values());
     }
 
+    /**
+     * Retrieves the function definition metadata for the given function name.
+     */
     public FunctionDefinition functionMetadata(String name) {
         String normalized = normalize(name);
         return promqlFunctions.get(normalized);
     }
 
-    public Function buildEsqlFunction(String name, Source source, List<Expression> params) {
-        FunctionDefinition metadata = functionMetadata(name);
+    public void checkFunction(Source source, String name) {
+        String normalized = normalize(name);
 
+        if (promqlFunctions.containsKey(normalized) == false) {
+            throw new ParsingException(source, "Function [{}] does not exist", name);
+        }
+
+        if (NOT_IMPLEMENTED.contains(normalized)) {
+            throw new ParsingException(source, "Function [{}] is not yet implemented", name);
+        }
+    }
+
+    public Expression buildEsqlFunction(
+        String name,
+        Source source,
+        Expression target,
+        Expression timestamp,
+        Expression window,
+        List<Expression> extraParams
+    ) {
+        checkFunction(source, name);
+        FunctionDefinition metadata = functionMetadata(name);
         try {
-            return metadata.esqlBuilder().apply(source, params);
+            return metadata.esqlBuilder().build(source, target, timestamp, window, extraParams);
         } catch (Exception e) {
             throw new ParsingException(source, "Error building ESQL function for [{}]: {}", name, e.getMessage());
         }
